[package]
name = "stocks"
version = "0.1.0"
authors = ["Anders Quist <anders@qinfo.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "stocks"


[dependencies]
yahoo_finance_api = "1.2.2"
tokio-test = "0.4.2"
structopt = "0.3.23"
chrono = "0.4.19"
tokio = { version = "1.12.0", features = ["full"] }

[dev-dependencies]
